# stripe_payment

./: .gitignore  Dockerfile  data.json  docker-compose.yml  manage.py  pyproject.toml
payment_system/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
payment_system/management/commands/: data.py
payment_system/migrations/: 0001_initial.py
stripe_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: item.html
